Add rollback functionality